user and admin OK

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -24,9 +24,9 @@
 
   <body>
     <div>
-      <p>Logar</p>
+      <p>Deslogar Aqui</p>
     </div>
-    <h1> Aplication </h1>
+    <h1> Admins </h1>
     <%= yield %>
   </body>
 </html>
