add Admins Edit and Admins Create/new

--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -8,7 +8,9 @@
           <th scope="col">Id</th>
           <th scope="col">Email</th>
           <th scope="col">created at</th>
-          <th scope="col"></th>
+          <th scope="col">
+            <%= link_to 'Create Admin', new_admins_backoffice_admin_path, class: "btn btn-info" %>
+          </th>
         </tr>
       </thead>
       <tbody>
