--- a/app/views/admins_backoffice/admins/shared/_form.html.erb
+++ b/app/views/admins_backoffice/admins/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<!--<% if @admin.errors.any? %>
+<% if @admin.errors.any? %>
   <div class="alert alert-danger d-flex align-items-center" role="alert">
     <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
     <div>
@@ -31,6 +31,4 @@
   <div class="col-12">
     <%= form.submit "Edit", class: "btn btn-primary" %>
   </div>
-<% end %>-->
-
-<%= render partial: 'admins_backoffice/admins/shared/form' %>
+<% end %>
