--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <%= link_to 'Admins', admins_backoffice_admins_path, class: "nav-link active", aria: { current: "page" } %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Subjects', admins_backoffice_subjects_path, class: "nav-link active", aria: { current: "page" } %>
+        </li>
       </ul>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ">
