--- a/app/views/layouts/admins_devise.html.erb
+++ b/app/views/layouts/admins_devise.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html data-bs-theme="dark">
   <head>
     <title><%= content_for(:title) || "Qero Viajar" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -21,11 +21,10 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-
+    <%= render "layouts/navbar" %>
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
 </html>
