--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -21,12 +21,12 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "site_index", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
     <%= render "layouts/navbar" %>
-    <h1> Site </h1>
     <%= yield %>
   </body>
 </html>
