--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,14 +1,37 @@
-<h1>Site::Welcome#index</h1>
-<p>Find me in app/views/site/welcome/index.html.erb</p>
+<div class="p-5 mb-4 bg-body-tertiary rounded-3"> 
+    <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+        <p class="col-md-8 fs-4">
+        <% if user_signed_in?%>
+            <p>usuáro email:  <%= current_user.email%> logado</p>
+        <%else%>
+            <P>User não logado</P>
+        <%end%>
 
-<% if user_signed_in?%>
-    <p>usuáro email:  <%= current_user.email%> logado</p>
-<%else%>
-    <P>User não logado</P>
-<%end%>
+        <% if admin_signed_in?%>
+            <p>admin email: <%= current_admin.email%> logado</p>
+        <%else%>
+            <P>Admin não logado</P>
+        <%end%>
+        </p>
+        <button class="btn btn-primary btn-lg" type="button">Example button</button>
+    </div>
+</div>
 
-<% if admin_signed_in?%>
-    <p>admin email: <%= current_admin.email%> logado</p>
-<%else%>
-    <P>Admin não logado</P>
-<%end%>
+<% @questions.each do |question| %>
+    <div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+        <div class="container-fluid py-4">
+            <h2 class="display-4 fw-bold"><%= question.description %></h2>
+            <p class="col-md-7 fs-3"><%= question.subject.description %></p>
+        </div>
+        <div class="panel-body">
+            <ul>
+                <% question.answers.each do |answer| %>
+                    <li>
+                        <p><%= answer.description %></p>
+                    </li>
+                <% end %>
+            </ul>
+        </div>
+    </div>
+<% end %>
