Answer correction added

--- a/app/views/admins_backoffice/questions/edit.html.erb
+++ b/app/views/admins_backoffice/questions/edit.html.erb
@@ -42,6 +42,6 @@
   <% end %>
 
   <div class="col-12">
-    <%= form.submit "Create", class: "btn btn-primary" %>
+    <%= form.submit "Edit", class: "btn btn-primary" %>
   </div>
 <% end %>
