--- a/app/views/layouts/admin_devise.html.erb
+++ b/app/views/layouts/admin_devise.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-bs-theme="dark">
   <head>
-    <title><%= content_for(:title) || "Qero Viajar" %></title>
+    <title><%= content_for(:title) || "Time to answer" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
