add profile user

--- a/app/views/users_backoffice/welcome/index.html.erb
+++ b/app/views/users_backoffice/welcome/index.html.erb
@@ -1,4 +1,16 @@
-<h1>UsersBackoffice::Welcome#index</h1>
-<p>Find me in app/views/users_backoffice/welcome/index.html.erb</p>
-
-<p> <%= button_to 'Logoff User', destroy_user_session_path, method: :delete%> </p>
+<body>
+    <div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+        <div class="container-fluid py-4">
+            <div class="card" style="width: 18rem;">
+                <%= image_tag "user_img.png", class: "card-img-top", alt: "User image" %>
+                <div class="card-body">
+                    <h5 class="card-title"><%= @user.full_name %></h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <div class="d-grid gap-2">
+                        <%= link_to 'Edit profile', users_backoffice_profile_path, class: "btn btn-primary" %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
