--- a/app/views/layouts/admin_devise.html.erb
+++ b/app/views/layouts/admin_devise.html.erb
@@ -21,10 +21,10 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= render "layouts/navbar" %>
   </head>
 
   <body>
+    <Nav><%= render "layouts/navbar" %></Nav>
     <%= yield %>
   </body>
 </html>
