--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
+    <Nav><%= render "layouts/navbar" %></Nav>
     <div  class="container-fluid p-4">
       <%= yield %>
     </div>
