--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
+    <Nav><%= render "layouts/navbar" %></Nav>
     <%= yield %>
   </body>
 </html>
