--- a/app/views/layouts/user_devise.html.erb
+++ b/app/views/layouts/user_devise.html.erb
@@ -21,11 +21,12 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    
 
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
+    <Nav><%= render "layouts/navbar" %></Nav>
     <%= yield %>
   </body>
 </html>
