--- a/app/views/admins_backoffice/admins/new.html.erb
+++ b/app/views/admins_backoffice/admins/new.html.erb
@@ -6,24 +6,27 @@
     </div>
   </div>
 <% end %>
+<div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+    <div class="container-fluid py-4 ">
+      <%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
+        <div class="mb-3">
+          <%= form.label :email, "E-mail", class: "form-label", for: "formGroupExampleInput" %>
+          <%= form.text_field :email, class: "form-control", id: "formGroupExampleInput", placeholder: "E-mail" %>
+        </div>
 
-<%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
-  <div class="mb-3">
-    <%= form.label :email, "E-mail", class: "form-label", for: "formGroupExampleInput" %>
-    <%= form.text_field :email, class: "form-control", id: "formGroupExampleInput", placeholder: "E-mail" %>
-  </div>
+        <div class="mb-3">
+          <%= form.label :password, "Password", class: "form-label", for: "newPasswordInput" %>
+          <%= form.password_field :password, class: "form-control", id: "newPasswordInput", placeholder: "Password" %>
+        </div>
 
-  <div class="mb-3">
-    <%= form.label :password, "Password", class: "form-label", for: "newPasswordInput" %>
-    <%= form.password_field :password, class: "form-control", id: "newPasswordInput", placeholder: "Password" %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label :password_confirmation, "Password Confirmation", class: "form-label", for: "confirmPasswordInput" %>
-    <%= form.password_field :password_confirmation, class: "form-control", id: "confirmPasswordInput", placeholder: "Password Confirmation" %>
-  </div>
-    
-  <div class="col-12">
-    <%= form.submit "Create", class: "btn btn-primary" %>
-  </div>
-<% end %>
+        <div class="mb-3">
+          <%= form.label :password_confirmation, "Password Confirmation", class: "form-label", for: "confirmPasswordInput" %>
+          <%= form.password_field :password_confirmation, class: "form-control", id: "confirmPasswordInput", placeholder: "Password Confirmation" %>
+        </div>
+          
+        <div class="col-12">
+          <%= form.submit "Create", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+</div>
