--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -1,36 +1,50 @@
-<body>
-    <div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
-        <div class="container-fluid py-4 ">
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">First Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Last Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password confirmation</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
+<div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+    <div class="container-fluid py-4 ">
+        <%= form_with url: update_email_users_backoffice_profile_path, model: @user, local: true do |form| %>
+            <div class="mb-3">
+                <%= form.label :email, "E-mail", class: "form-label", for: "formGroupEmailInput" %>
+                <%= form.text_field :email, class: "form-control", id: "formGroupEmailInput", placeholder: "E-mail" %>                
+            </div>
+            <div class="mb-3">
+                <%= form.label :email, "E-mail confirmation", class: "form-label", for: "formGroupEmailConfirmInput" %>
+                <%= form.text_field :email, class: "form-control", id: "formGroupEmailConfirmInput", placeholder: "E-mail" %>            
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        <% end %>
     </div>
-</body>
+</div>
+<div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+    <div class="container-fluid py-4 ">
+        <%= form_with url: update_name_users_backoffice_profile_path, model: @user, local: true do |form| %>
+           
+            <div class="mb-3">
+                <%= form.label :first_name, "First Name", class: "form-label", for: "formGroupFirstNameInput" %>
+                <%= form.text_field :first_name, class: "form-control", id: "formGroupFirstNameInput", placeholder: "First Name" %>               
+            </div>
+            <div class="mb-3">
+                <%= form.label :last_name, "Last Name", class: "form-label", for: "formGroupLastNameInput" %>
+                <%= form.text_field :last_name, class: "form-control", id: "formGroupLastNameInput", placeholder: "Last Name" %>     
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        <% end %>
+    </div>
+</div>
+<div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
+    <div class="container-fluid py-4 ">
+        <%= form_with url: update_password_users_backoffice_profile_path, model: @user, local: true do |form| %>
+            <div class="mb-3">
+                <%= form.label :current_password, "Current Password", class: "form-label", for: "CurrentPasswordInput" %>
+                <%= form.password_field :current_password, class: "form-control", id: "CurrentPasswordInput", placeholder: "Current Password" %>
+            </div>
+            <div class="mb-3">
+                <%= form.label :password, "New Password", class: "form-label", for: "newPasswordInput" %>
+                <%= form.password_field :password, class: "form-control", id: "newPasswordInput", placeholder: "Password" %>
+            </div>
+            <div class="mb-3">
+                <%= form.label :password_confirmation, "Password Confirmation", class: "form-label", for: "confirmPasswordInput" %>
+                <%= form.password_field :password_confirmation, class: "form-control", id: "confirmPasswordInput", placeholder: "Password Confirmation" %>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        <% end %>
+    </div>
+</div>
