--- a/app/views/users_backoffice/welcome/index.html.erb
+++ b/app/views/users_backoffice/welcome/index.html.erb
@@ -2,9 +2,9 @@
     <div class="p-4 mb-3 bg-body-tertiary rounded-3"> 
         <div class="container-fluid py-4">
             <div class="card" style="width: 18rem;">
-                <%= image_tag "user_img.png", class: "card-img-top", alt: "User image" %>
+                <%= image_tag(profile_img, class: "card-img-top") %>
                 <div class="card-body">
-                    <h5 class="card-title"><%= current_user.full_name %></h5>
+                    <h5 class="card-title"><%= @user.full_name %></h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                     <div class="d-grid gap-2">
                         <%= link_to 'Edit profile', users_backoffice_profile_path, class: "btn btn-primary" %>
@@ -12,5 +12,21 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="modal fade" id="userImageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+        <div class="modal-header">
+            <h5 class="modal-title">Foto do usuário</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body text-center">
+            <%= image_tag "user_img.png", class: "img-fluid rounded" %>
+        </div>
+
+        </div>
+    </div>
     </div>
 </body>
